# optimalbet

./: .gitignore  .prettierignore  GEMINI.md  README.md  eslint.config.js  index.html  manifest.webmanifest  package-lock.json  package.json  sw.js  vite.config.ts
.specify/memory/: constitution.md
assets/: index-BP-lypR6.js  index-BmDYWTYG.css  index-C0c8oQnx.js  index-C6xLXDB1.css  index-CEAu2QyV.css  index-CW0wBRI_.js  index-DN8WkVxR.js  workbox-window.prod.es5-BIl4cyR9.js  worker-Bns_92K0.js  worker-MGntRKig.js
specs/001-poker-ev-calc/: spec.md
specs/002-poker-ev-calc/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-advanced-poker-analytics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-fix-logic-stability/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-engine-performance-and-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-betting-ux-optimization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-input-speed-optimization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-suggest-raise-sizes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: App.tsx  main.tsx
src/components/: BettingInputs.tsx  OpponentSlider.tsx  ResultsDisplay.tsx
src/constants/: glossary.ts
src/engine/: worker.ts
src/engine/wasm/: Cargo.toml
src/engine/wasm/src/: lib.rs
src/hooks/: useAutoPersistence.ts  useBettingState.ts  useCalculations.ts  (+6 more)
(+63 files in other folders)
